# VPHAMI-5

./: .pub  .pub.pub  CMakeLists.txt  ScheduleWindow.cpp  ScheduleWindow.h  ScheduleWindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  rectanglewidget.cpp  rectanglewidget.h  resources.qrc  todolist.cpp  todolist.h  todolistwindow.cpp  todolistwindow.h  todolistwindow.ui
